2006-09-06  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/viewer.py:
	Die combobox... DIEEEE!!!!!
	Solves #338065

2006-08-25  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline.py:
	Actually emit the 'source-removed' signal when a source is removed
	from a composition.
	* pitivi/ui/tracklayer.py:
	remove source graphically from the complex timeline when it gets
	removed.

2006-08-25  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline.py:
	Implement TimelineComposition::RemoveSource
	Added more comments
	* pitivi/ui/timelineobjects.py:
	Implement popup menu for sources, with remove item
	Add 'delete-me' signal for sources
	Implement removal of sources from the Simple Timeline
	* pitivi/ui/viewer.py:
	Implement proper behaviour for when the timeline becomes empty again.

2006-08-21  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Follow the gnome toolbar and menu settings.
	Closes #339994

2006-08-21  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/glade.py:
	Specify the 'pitivi' domain when importing glade files, so i18n can work
	on glade-based widgets.

2006-08-21  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Close the About dialogbox when the user clicks on the [Close] button.

2006-08-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py: (SmartBin._makeEncThread):
	Insert a videorate before the video encoder in order to cope with
	encoders that don't react well to non-perfect/non-continuous streams.

2006-08-18  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	Remove unwanted print statement
	* pitivi/elements/singledecodebin.py:
	Remove use of fakesink, doesn't seem to break anything.

2006-08-16  Edward Hervey  <edward@fluendo.com>

	* po/.cvsignore:
	* po/Makefile.in.in:
	Forgot to commit Makefile.in.in

2006-08-14  Edward Hervey  <edward@fluendo.com>

	* ABOUT-NLS:
	* intltool-extract.in:
	* intltool-merge.in:
	* intltool-update.in:
	new files
	* Makefile.am: