@@ -1,5 +1,12 @@
 2006-09-06  Edward Hervey  <edward@fluendo.com>
 
+	* pitivi/ui/sourcefactories.py:
+	Don't close filechooser dialog when adding a file. Instead provide
+	both a [ADD] and a [CLOSE] button for the dialogbox.
+	Closes #353861
+
+2006-09-06  Edward Hervey  <edward@fluendo.com>
+
 	* pitivi/ui/viewer.py:
 	Die combobox... DIEEEE!!!!!
 	Solves #338065
